# unzip

./: .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SKILLS.md  clippy.toml  rustfmt.toml
.claude/: settings.json
.claude/agents/: rust-code-reviewer.md  rust-perf-analyst.md  rust-test-runner.md
.claude/rules/: rust-code-style.md  rust-testing.md
.claude/skills/rust-benchmarking/: SKILL.md
.claude/skills/rust-building/: SKILL.md
.claude/skills/rust-testing/: SKILL.md
.github/workflows/: release.yml
benches/: extraction_bench.rs
src/: args.rs  extract.rs  glob.rs  lib.rs  linux.rs  list.rs  main.rs  password.rs  test_archive.rs  utils.rs  zipinfo.rs
