[package]
name = "unzip"
version = "0.3.0"
edition = "2024"
description = "A fast, reliable unzip utility written in Rust - Info-ZIP compatible"
license = "MIT"
authors = ["Your Name"]

[dependencies]
zip = "2.2"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17"
memmap2 = "0.9"
filetime = "0.2"
crc32fast = "1.4"

# Linux-specific optimizations
[target.'cfg(target_os = "linux")'.dependencies]
rustix = { version = "1.0", features = ["fs", "mm"] }

[dev-dependencies]
tempfile = "3.15"
criterion = "0.5"

[[bench]]
name = "extraction_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 3
